--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -1,23 +1,15 @@
-.blog-heading-area {
-  &.section-padding {
-    padding-top: 160px;
-  }
-}
 .blog-details-area {
-  padding-bottom: 100px;
-}
-.blog-heading {
+  margin-top: 100px;
   h1 {
-    font-size: 36px;
-    line-height: 44px;
     font-weight: 700;
-    margin-bottom: 10px;
+    font-size: 42px;
+    line-height: 130%;
+    /* or 55px */
+
+    letter-spacing: -2px;
   }
 }
-.blog-heading {
-  max-width: 70%;
-  margin: 0 auto;
-}
+
 .fig-style {
   max-height: 650px;
   overflow: hidden;
@@ -39,6 +31,68 @@
 .sticky-social-menu {
   position: sticky;
   top: 130px;
+  z-index: 99;
+}
+
+.single-wizard {
+  h4 {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 130%;
+    letter-spacing: -1px;
+    margin-bottom: 15px;
+  }
+
+  .single-recent-blog {
+    margin-bottom: 1rem;
+    display: flex;
+    .date-month {
+      width: 60px;
+      height: 60px;
+      background-color: rgba(0, 52, 102, 0.12);
+      margin-right: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+      padding: 8px;
+
+      .date {
+        font-weight: 300;
+        font-size: 27.3833px;
+        line-height: 120%;
+      }
+
+      .month {
+        font-weight: 700;
+        font-size: 16.7833px;
+        line-height: 120%;
+      }
+    }
+
+    .recent-blog-content {
+      width: calc(100% - 76px);
+      h2 {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 120%;
+        /* or 19px */
+
+        letter-spacing: 0.25px;
+        a {
+          color: $ac-color-heading;
+        }
+      }
+
+      .meta {
+        a {
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 150%;
+        }
+      }
+    }
+  }
 }
 //code block style
 .code-block-heading {
